--- a/index.html
+++ b/index.html
@@ -57,6 +57,36 @@
 
             </div>
         </section>
+        <div class="lives-depends">
+        <div class="half-width">
+            <h2>Their lives depend on 
+                your donation</h2>
+            <p>
+                Without you, social impact organizations couldn’t exist. Without you, a cry for help goes unanswered, a problem goes unsolved. Whether it funds a nonprofit’s program or its operations, your donation is vital to their ability to advance their mission and grow. Even a small gift propels your favorite nonprofit toward greater impact.
+            </p>   
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/">How to Contribute?</a> 
+
+        </div>
+        <div class="half-width">
+            <img src="images/donation7.jpg" alt="">
+        </div>
+    </div>
+    <div class="updates">
+        <h2>Get My Updates</h2>
+        <p>
+            Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli 
+            deterruisset. No duo populo animal noluisse, eni
+        </p>
+    <form>
+        <label for="email"></label>
+        <input type="text" placeholder="Enter Email" name="email" id="email" required>
+        <button type="submit" class="registerbtn">Register</button>
+        <div class="container signin">
+            <p>Already have an account? <a href="#">Sign in</a>.</p>
+          </div>
+    </form>
+
+    </div>
 </body>
 <footer class="foot">
     <h2>BE HUMBLE</h2>
