--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
         <h1> Let's Help Those Who Are  <h1>
         <h1>More In Need</h1>  
         <p id="text">
-        amar bangladesh.....................
+            The Bangladesh Government continues to mobilize resources to support the affected communities, such as basic food, water purification tablets, and cash grants. However, further support from charitable organizations and development partners is still desperately needed. Due to the power outage and the shortage of safe drinking water, many city-dwellers are buying bottled water at increased prices. The need for rescue and relief intensifies as days pass in the flood-affected areas.
         </p> 
         <a class="link-button" target="_blank" href="https://www.linkedin.com/">DONATE NOW</a>
     </div>
     
         <div class="donate-today">
             <h1>Donate Today</h1>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli deterruisset. No duo populo animal noluisse, enim</p>
+            <p>The urgent and immediate needs identified are to: (1) distribute food to 10,000 households (i.e. 70.000 people) for 5 days, (2) install 50 tube-wells to ensure the access to safe drinking water, (3) install 50 latrines to reduce to open defecation, (4) provide emergency medical care , (5) distribute seeds to 2,000 households (6) repair and reconstruct around 100 fully or partially damaged schools and community structures.
+
+            </p>
             <h1> <span class="col">100TK</span><span class="tk">200TK</span><span class="col">500TK</span><span class="col">1000TK</span><span class="col">5000TK</span>  </h1>
             
         </div>
@@ -43,16 +45,16 @@
             <div class="donate-plan">
                 <div id="plan1">
                     <img src="images/food.png" alt="">
-                    <h3>family</h3>
+                    <h3>Food for a family</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, saepe!</p>
                 </div>
                 <div  id="plan2">
                     <img src="images/shelter.png" alt="">
-                    <h3>family</h3>
+                    <h3>Shelter for a family</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, laborum.</p>                </div>
                 <div id="plan3">
                     <img src="images/Frame-1.png" alt="">
-                    <h3>family</h3>
+                    <h3>Education for a Child</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa, nam.</p>                </div>
 
             </div>
