--- a/index.html
+++ b/index.html
@@ -41,21 +41,21 @@
           
         <section class="donate-plan-section">
             <h1>Our Donate Plan</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto officia, distinctio rerum sapiente incidunt exercitationem illum sunt nisi sequi reiciendis.</p>
+            <p>We need instant and easy donate system for flood aid and donation campaigns for the inundated regions in Bangladesh.please Regester and Donate as soon as possible. </p>
             <div class="donate-plan">
                 <div id="plan1">
                     <img src="images/food.png" alt="">
                     <h3>Food for a family</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, saepe!</p>
+                    <p>Many of the affected people are having to have meals only once a day, as food supply has been scarce.immense sufferings due to crisis of food and safe drinking water.</p>
                 </div>
                 <div  id="plan2">
                     <img src="images/shelter.png" alt="">
                     <h3>Shelter for a family</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, laborum.</p>                </div>
+                    <p>over 2 million people.people and their livestock in mortal threat of drowning, hunger, thirst, exposure, and lack of shelter, accessibility and sanitation. 42 schools have been closed temporarily.</p>                </div>
                 <div id="plan3">
                     <img src="images/Frame-1.png" alt="">
                     <h3>Education for a Child</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa, nam.</p>                </div>
+                    <p>FLOODING in the north-east has left about 1,000 educational institutions primary, secondary and higher secondary closed.This suggests that the education of thousands of children is in jeopardy again</p>                </div>
 
             </div>
         </section>
@@ -76,8 +76,7 @@
     <div class="updates">
         <h2>Get My Updates</h2>
         <p>
-            Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli 
-            deterruisset. No duo populo animal noluisse, eni
+            As the victims' livelihoods have been damaged, it is a foremost thing to provide relief and support. Rehabilitation of the affected households in the villages will ensure that these families come out of the calamity. Their lives will be renewed and their children will be able to go back to school. The displaced families will get back their lives in terms of rebuilding their home, scope for earning to ensure food support and protect them from further deterioration.
         </p>
     <form>
         <label for="email"></label>
